--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9032,3 +9032,57 @@
     model: X5 Soul Style
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Signature L Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.116 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: "60.0.3112.116"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Okapia
+    model: Signature L
+  os_family: Android
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Signature Pro) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.116 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: "60.0.3112.116"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Okapia
+    model: Signature Pro
+  os_family: Android
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Signature Touch) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.116 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: "60.0.3112.116"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Okapia
+    model: Signature Touch
+  os_family: Android
+  browser_family: Chrome
