--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2927,6 +2927,8 @@ bq:
       model: 'Strike Selfie Max'
     - regex: 'BQ(?:ru)?-5503(?:[);/ ]|$)'
       model: 'Nice 2'
+    - regex: 'BQ(?:ru)?-4030G(?:[);/ ]|$)'
+      model: 'Nice Mini'
     - regex: 'BQS-5502(?:[);/ ]|$)'
       model: 'Hammer'
     - regex: 'BQS-5501(?:[);/ ]|$)'
@@ -2955,6 +2957,8 @@ bq:
       model: 'Space'
     - regex: 'BQ-5082(?:[);/ ]|$)'
       model: 'Sense 2'
+    - regex: 'BQ-5045L(?:[);/ ]|$)'
+      model: 'Wallet'
     - regex: 'BQ-5071(?:[);/ ]|$)'
       model: 'Belief'
     - regex: 'BQ[S]?-(?:5065|5340)(?:[);/ ]|$)'
@@ -3709,14 +3713,14 @@ Crosscall:
 
 # AllDocube (https://www.alldocube.com/)
 AllDocube:
-  regex: '(?:T1001XS?|iPlay_20|U1006)(?:[);/ ]|$)'
+  regex: '(?:T1001XS?|iPlay_20|U1006H?)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'T1001XS(?:[);/ ]|$)'
       model: 'M5XS'
     - regex: 'T1001X(?:[);/ ]|$)'
       model: 'M5X'
-    - regex: 'U1006(?:[);/ ]|$)'
+    - regex: 'U1006H?(?:[);/ ]|$)'
       model: 'iPlay 10 Pro 10.1"'
     - regex: 'iPlay_20(?:[);/ ]|$)'
       model: 'iPlay 20'
@@ -4026,7 +4030,7 @@ Digiland:
 
 # Digma
 Digma:
-  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI ATL 4G|CITI Kids|CITI Octa [178]0|CITI 1902 3G|CITI Z530 3G|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](606[32]ML|11[459]4MG|1207MG|1210MG|1195MG|1196ML|3001ML|500[67]PG|7208MG|7113PL|7193MG|820[69]MG|8139ML|8143MG|8152ML|1050PL|8205PG|7203MG)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|LINX B510 3G LT5037MG|LINX A452 3G LT4030PG|LINX A453 3G LT4038PG|LINX A420 3G LS4019PG|LINX A450 3G LT4028PG|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|PS1043MG|LS405[01]MG|LS5053ML|LT5048MG|HT7071MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TT1004PG|TT7025MG|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
+  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI ATL 4G|CITI Kids|CITI Octa [178]0|CITI 1902 3G|CITI Z530 3G|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](606[32]ML|11[459]4MG|1207MG|1210MG|1195MG|1196ML|3001ML|4024PG|500[67]PG|7208MG|7113PL|7193MG|820[69]MG|8139ML|8143MG|8152ML|1050PL|8205PG|7203MG)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|LINX B510 3G LT5037MG|LINX A452 3G LT4030PG|LINX A453 3G LT4038PG|LINX A420 3G LS4019PG|LINX A450 3G LT4028PG|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|PS1043MG|LS405[01]MG|LS5053ML|LT5048MG|HT7071MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TT1004PG|TT7025MG|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
   device: 'smartphone'
   models:
     - regex: 'HIT(?: 3G)? HT707[10]MG'
@@ -4072,7 +4076,7 @@ Digma:
       model: 'CITI ATL 4G'
     - regex: '(CITI Z530 3G)'
       model: '$1'
-    - regex: '(CITI [0-9]+ [34]G) CS(?:606[32]ML)'
+    - regex: '(CITI [A-Z0-9]+ [34]G) C[ST](?:606[32]ML|4024PG)'
       model: '$1'
 
     - regex: 'PS1043MG'
@@ -5627,9 +5631,11 @@ Hafury:
 
 # Haier
 Haier:
-  regex: 'Haier|I6_Infinity|Titan[ _]T[135]|(?:HW-)?W(?:716|757|860|970)(?:[);/ ]|$)|S5 Silk|(?:HM-)?(N505|N700|G(?:152|303|353|552|70[01])?-FL|HM-N501-FL|G(?:303)?-W|I(?:557)?-FL)|(?:PAD[ _](D71|G781|d85))'
+  regex: 'Haier|I6_Infinity|Titan[ _]T[135]|(?:HW-)?W(?:716|757|860|970)(?:[);/ ]|$)|S5 Silk|(?:HM-)?(N505|N700|G(?:152|303|353|552|70[01])?-FL|HM-N501-FL|G(?:303)?-W|I(?:557)?-FL)|(?:PAD[ _](?:D71|G781|d85))|A2_Lite_NFC'
   device: 'smartphone'
   models:
+    - regex: 'A2_Lite_NFC'
+      model: 'Alpha A2 Lite NFC'
     - regex: 'HM-N505-FL'
       model: 'I8'
     - regex: 'S5 Silk'
@@ -13287,7 +13293,7 @@ Tesco:
 
 # teXet
 teXet:
-  regex: 'Texet|(NaviPad [^/;]*) Build|TM-(?:1046|1058|1057|1067|3000|3200R|3500|4003|4071|450[34]|451[30]|4377|4082R|550[83]|5010|5017|507[4-7]|5[23]77|6003|6906|702[13]|7055HD|709[69]|9747BT|9758|9751HD|9767|5513|520[410]|5505|507[13]|5581|7859|8044|9748[ _]3G|9720|7047HD[ _]3G|9757|9740|4982|4515|4083|500[3567]|5571|3204R|5016|8043|7047HD[ _]3G|8041HD|8066|705[23]|7041|8041HD|8051|8048|974[96]|973[78]W|974[170]|9743W|9750HD|7043XD|7049|7887|7037W|702[46])|TB-(771A|711A)|X-Force[\(-]?TM-5009\)?|X-Plus[\(-]?TM-5577\)?|TM_5011|X-pad (?:AIR 8|iX 7|NAVI 7.[35]|NAVI 10|SKY 8.1|STYLE 8|STYLE 10.1|HIT|LITE 7.[12]|QUAD (?:7.2|10|7)|SHINE 8.1)(?: 3G)?'
+  regex: 'Texet|(NaviPad [^/;]*) Build|TM-(?:1046|1058|1057|1067|3000|3200R|3500|4003|4071|450[34]|451[30]|4377|4082R|508[34]|550[358]|5010|5017|507[4-7]|5[23]77|6003|6906|702[13]|7055HD|709[69]|9747BT|9758|9751HD|9767|5513|520[410]|507[13]|558[134]|570[23]|7859|8044|9748[ _]3G|9720|7047HD[ _]3G|9757|9740|4982|4515|4083|500[3567]|5571|3204R|5016|8043|7047HD[ _]3G|8041HD|8066|705[23]|7041|8041HD|8051|8048|974[96]|973[78]W|974[170]|9743W|9750HD|7043XD|7049|7887|7037W|702[46])|TB-(771A|711A)|X-Force[\(-]?TM-5009\)?|X-Plus[\(-]?TM-5577\)?|TM_5011|X-pad (?:AIR 8|iX 7|NAVI 7.[35]|NAVI 10|SKY 8.1|STYLE 8|STYLE 10.1|HIT|LITE 7.[12]|QUAD (?:7.2|10|7)|SHINE 8.1)(?: 3G)?'
   device: 'tablet'
   models:
     - regex: 'TM-9749'
@@ -13361,6 +13367,18 @@ teXet:
     - regex: 'TM_5011'
       device: 'smartphone'
       model: 'X-Omega'
+    - regex: 'TM-508(3|4)'
+      device: 'smartphone'
+      model: 'Pay $1G'
+    - regex: 'TM-558(3|4)'
+      device: 'smartphone'
+      model: 'Pay 5.5" $1G'
+    - regex: 'TM-5702'
+      device: 'smartphone'
+      model: 'Pay 5.7" 3G'
+    - regex: 'TM-5703'
+      device: 'smartphone'
+      model: 'Pay 5.7" Pro'
     - regex: 'TM-5201'
       device: 'smartphone'
       model: 'Rock'
@@ -15902,7 +15920,7 @@ Lemhoov:
       model: '$1'
 # MTC
 MTC:
-  regex: 'MTC[ _](968|97[82]|970|982[OT]?|1078)|(?:MTC[_ ])?SMART[ _]?(?:Race[2]?|Sprint|Run|Surf[2]?)[ _]4G|MTC975|Smart_LINE|MTC[ _]SMART[ _](?:Run|Start_2)'
+  regex: 'MTC[ _](968|97[82]|970|982[OT]?|1078)|(?:MTC[_ ])?SMART[ _]?(?:Race[2]?|Sprint|Run|Surf[2]?)[ _]4G|MTC975|Smart_(?:LINE|Light)|MTC[ _]SMART[ _](?:Run|Start_2)'
   device: 'smartphone'
   models:
     - regex: 'MTC[ _]?(97[258]|970[H]?|982[OT]?|968)'
@@ -15920,6 +15938,8 @@ MTC:
       model: 'Smart Start 2'
     - regex: 'Smart_LINE'
       model: 'Smart Line'
+    - regex: 'Smart_Light'
+      model: 'Smart Light'
     - regex: 'SMART[ _]?Run(?:[ _]4G)?'
       model: 'Smart Run 4G'
     - regex: 'SMART[ _]Surf2[ _]4G'
@@ -16338,11 +16358,15 @@ Xoro:
 
 # Vinga
 Vinga:
-  regex: 'VMP-(021-82|041-162|011-81)(?:[);/ ]|$)'
+  regex: 'VMP-(015-162|021-82|041-162|011-81|025-324)(?:[);/ ]|$)'
   device: 'tv'
   models:
     - regex: 'VMP-021-82'
       model: '021'
+    - regex: 'VMP-025-324'
+      model: '025'
+    - regex: 'VMP-015-162'
+      model: '015'
     - regex: 'VMP-041-162'
       model: '041'
     - regex: 'VMP-011-81'
@@ -16694,7 +16718,7 @@ NEXON:
 
 # ONN
 ONN:
-  regex: '(ONA19TB00[27])(?:[);/ ]|$)'
+  regex: '(ONA19TB00[327])(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
 
@@ -17618,11 +17642,15 @@ Beelink:
 
 # MAXVI
 MAXVI:
-  regex: 'MAXVI[ _](?:MS401)(?:[);/ ]|$)|(?:\w+)?_MAXVI_\w+'
+  regex: 'MAXVI[ _](?:MS401)(?:[);/ ]|$)|(?:\w+)?_MAXVI_\w+|MS502[_ ]Orion|MS531'
   device: 'smartphone'
   models:
     - regex: 'MAXVI[ _](MS401)'
       model: '$1'
+    - regex: 'MS531'
+      model: 'MS531 Vega'
+    - regex: 'MS502[_ ]Orion'
+      model: 'MS502 Orion'
     - regex: '(?:\w+)?MAXVI_(P11|K10|X[358]00)_\w+'
       device: 'feature phone'
       model: '$1'
